--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "@fortawesome/fontawesome-free": "^5.15.3",
         "bootstrap": "^5.0.0",
         "jquery": "^3.6.0",
+        "ngx-order-pipe": "^2.1.1",
+        "ngx-pagination": "^5.1.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.11.3"
