add chart.js to project

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/router": "~11.2.13",
         "@fortawesome/fontawesome-free": "^5.15.3",
         "bootstrap": "^5.0.0",
+        "chart.js": "^3.3.2",
         "jquery": "^3.6.0",
         "ngx-order-pipe": "^2.1.1",
         "ngx-pagination": "^5.1.0",
