--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
         "@angular/router": "~11.2.13",
         "@fortawesome/fontawesome-free": "^5.15.3",
         "bootstrap": "^5.0.0",
-        "chart.js": "^3.3.2",
+        "chart.js": "^2.9.3",
         "jquery": "^3.6.0",
+        "ng-chartjs": "^0.2.3",
+        "ng2-charts": "^2.3.0",
         "ngx-order-pipe": "^2.1.1",
         "ngx-pagination": "^5.1.0",
         "pdfmake": "^0.1.71",
@@ -34,6 +36,7 @@
         "@angular-devkit/build-angular": "~0.1102.12",
         "@angular/cli": "~11.2.12",
         "@angular/compiler-cli": "~11.2.13",
+        "@types/chart.js": "^2.9.32",
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
